@@ -1,6 +1,7 @@
 package ru.job4j.io;
 
 import java.io.*;
+import java.util.Arrays;
 
 /**
  * @author Hincu Andrei (andreih1981@gmail.com)on 12.02.2018.
@@ -18,7 +19,7 @@ public class Service {
         try {
             byte[] buffer = new byte[is.available()];
             is.read(buffer, 0, is.available());
-            Integer integer = new Integer(new String(buffer));
+            Integer integer =  Integer.valueOf(new String(buffer));
             if (integer % 2 == 0) {
                 even = true;
             }
@@ -80,7 +81,7 @@ public class Service {
                 line = reader.readLine();
                 for (String ab : abuse) {
                     if (line.contains(ab)) {
-                        line = line.replace(ab, "");
+                        line = line.replaceAll(ab, "");
                     }
                 }
                 writer.write(line + System.lineSeparator());
@@ -88,6 +89,15 @@ public class Service {
             }
         } catch (IOException e) {
             e.printStackTrace();
+        }
+    }
+    void dropAbuses3(final InputStream in, final OutputStream out, final String[] abuse) throws IOException {
+        try (final PrintStream writer = new PrintStream(out);
+             final BufferedReader reader = new BufferedReader(new InputStreamReader(in))) {
+            reader.lines()
+                    .map(s -> Arrays.stream(abuse)
+                            .reduce(s, (s1, s2) -> s1.replaceAll(s2, ""))
+                    ).forEach(writer::println);
         }
     }
 }
